# echo-ledger

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
backend/: const.py  constants.py  init.py  main.py  pyproject.toml  utils.py
backend/app/: dashboard.py  db.py  llama.py  routes.py  silero.py  utils.py  whisper.py
backend/data/: prompt.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: processor.js
frontend/src/components/: Navbar.vue
frontend/src/views/: Dashboard.vue  Home.vue  Recorder.vue
src/: main.js  router.js
src/components/: Skeleton.vue
src/views/: Recorder.vue
